@@ -24,6 +24,9 @@ Changes from version 0.8-4 to 0.9-0
 
 2.  Bug fix for 'lwd' when image involves PostScript rotation
 
+3.  Improvements to determination of ghostscript command syntax
+    (based on dev2bitmap).  Suggestion by Brian Ripley.
+
 
 Changes from version 0.8-0 to 0.8-4
 ===================================
